# agenteval

./: .gitignore  LICENSE  README.md  action.yml  architecture.md  prd.md  product-brief.md  pyproject.toml  sprint-plan.md  test.db
.github/workflows/: ci.yml  publish.yml
demo/: echo_agent.py  math_agent_suite.yaml
docs/: github-actions.md  troubleshooting.md
docs/assets/: compare-output.txt  help-output.txt  list-output.txt  run-output.txt
docs/v0.2.0/: architecture.md  brief.md  prd.md  sprint.md
docs/v0.3.0/: architecture.md  brief.md  prd.md  sprint.md
examples/: agenteval.yml
examples/docker/: Dockerfile  README.md  docker-compose.yml  suite.yaml
examples/github-actions/: README.md  basic.yml  with-comparison.yml  with-gates.yml
examples/typescript-agent/: README.md  agent.ts  package.json  suite.yaml  wrapper.py
src/agenteval/: __init__.py  badge.py  baselines.py  calibration.py  capabilities.py  ci.py  ci_platforms.py  cli.py  compare.py  cost.py  eu_ai_act.py  flaky.py  gates.py  github.py  loader.py  models.py  notifiers.py  profiler.py  profiles.py  progress.py  provenance.py  reports.py  runner.py  store.py  trends.py  verify.py  webhooks.py
tests/: test_action_yml.py  test_adapters.py  test_adapters_crewai_autogen.py  test_advanced_graders.py  test_agentlens_emitter.py  test_baselines.py  test_calibration.py  test_capabilities.py  test_ci.py  test_ci_platforms.py  test_cli.py  test_compare.py  test_cost.py  test_distributed.py  test_eu_ai_act.py  test_flaky.py  test_generators.py  test_github.py  test_graders.py  test_import_polish.py  test_importer.py  test_llm_gen.py  test_loader.py  test_models.py  test_otel_import.py  test_parallel.py  test_pass_hat_k.py  test_profiler.py  test_provenance.py  test_runner.py  test_store.py  test_trajectory_grader.py  test_verify_evidence.py  test_webhooks.py
tests/fixtures/: bad_yaml.yaml  empty_cases.yaml  invalid_grader.yaml  missing_cases.yaml  missing_name.yaml  valid_suite.yaml
tests/helpers/: custom_grader_fn.py  echo_agent.py
(+62 files in other folders)
